syntax = "proto3";

package auth; // More concise package name

service AuthService { // More descriptive service name
  rpc Login(LoginRequest) returns (LoginResponse) {}
}

// Consolidated message for login request
message LoginRequest {
  string username = 1;
  string password = 2; // Clearer field name
}

message LoginSuccess {
  string token = 1;
}

enum LoginError {
  INVALID_CREDENTIALS = 0;
  ACCOUNT_NOT_FOUND = 1;
  ACCOUNT_DISABLED = 2;
}

// Renamed for clarity
message LoginResponse {
  oneof result {
    LoginSuccess success = 1;
    LoginError error = 2;
  }
}
